Fixed bug where hovered links on landing turned invisible

--- a/eventuretime/events/static/css/base.css
+++ b/eventuretime/events/static/css/base.css
@@ -122,7 +122,7 @@ a:focus {
 
 .navbar-custom .nav li a:hover {
     outline: 0;
-    color: rgba(255,255,255,.8);
+    color: rgba(128,128,128,.8);
     background-color: transparent;
 }
 
@@ -141,7 +141,7 @@ a:focus {
 }
 
 .navbar-custom .nav li.active a:hover {
-    color: #fff;
+    color: gray;
 }
 
 @media(min-width:768px) {
@@ -832,8 +832,7 @@ ul{		float:right;
 	font-size:28px;
     -webkit-font-smoothing: antialiased;
 }
-a, a:hover, a:active { color: white; }
-a:visited { color: #1baba7; }
+a, a:active { color: white; }
 
 .bannerPhoto {
 	display:block;
